# auth-digid

./: .gitignore  LICENSE  README.md  brp.go  brp_test.go  ca.cert  config.json  configuration.go  configuration_test.go  confirm.html  encryptionkey.pem  go.mod  go.sum  jwt.go  jwt_test.go  main.go  main_development.go  myservice.cert  myservice.key  schema.sql  session.go  session_test.go  signkey.pem  translations.go
.github/workflows/: codeql.yml  go.yml  lint.yaml  update.yaml
assets/: style.css
locale/: en.json  nl.json
templates/: confirm.html
test-jwt/: Cargo.toml
test-jwt/src/: main.rs
