[package]
name = "test-jwt"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-contact-jwt = { git = "https://github.com/id-contact/id-contact-jwt.git" }
josekit = "0.8.0"
